@@ -26,6 +26,168 @@
  */
 
 
+/* Help message */
+
+char *cpu_config_help =
+	"The CPU configuration file is a plain text file with the IniFile format, defining\n"
+	"the parameters of the CPU model used for a detailed (architectural) simulator.\n"
+	"This configuration file is passed to Multi2Sim with option '--cpu-config <file>,\n"
+	"which must be accompanied by option '--cpu-sim detailed'.\n"
+	"\n"
+	"The following is a list of the sections allowed in the CPU configuration file,\n"
+	"along with the list of variables for each section.\n"
+	"\n"
+	"Section '[ General ]':\n"
+	"\n"
+	"  Cores = <num_cores> (Default = 1)\n"
+	"      Number of cores.\n"
+	"  Threads = <num_threads> (Default = 1)\n"
+	"      Number of hardware threads per core. The total number of computing nodes\n"
+	"      in the CPU model is equals to Cores * Threads.\n"
+	"  ContextSwitch = {t|f} (Default = t)\n"
+	"      Allow context switches in computing nodes. If this option is set to false,\n"
+	"      the maximum number of contexts that can be run is limited by the number of\n"
+	"      computing nodes; if a contexts spawns a child that cannot be allocated to\n"
+	"      a free hardware thread, the simulation will stop with an error message.\n"
+	"  ContextQuantum = <cycles> (Default = 100k)\n"
+	"      If ContextSwitch is true, maximum number of cycles that a context can occupy\n"
+	"      a CPU hardware thread before it is replaced by other pending context.\n"
+	"  ThreadQuantum = <cycles> (Default = 1k)\n"
+	"      For multithreaded processors (Threads > 1) configured as coarse-grain multi-\n"
+	"      threading (FetchKind = SwitchOnEvent), number of cycles in which instructions\n"
+	"      are fetched from the same thread before switching.\n"
+	"  ThreadSwitchPenalty = <cycles> (Default = 0)\n"
+	"      For coarse-grain multithreaded processors (FetchKind = SwitchOnEvent), number\n"
+	"      of cycles that the fetch stage stalls after a thread switch.\n"
+	"  RecoverKind = {Writeback|Commit} (Default = Writeback)\n"
+	"      On branch misprediction, stage in the execution of the mispredicted branch\n"
+	"      when processor recovery is triggered.\n"
+	"  RecoverPenalty = <cycles> (Default = 0)\n"
+	"      Number of cycles that the fetch stage gets stalled after a branch\n"
+	"      misprediction.\n"
+	"\n"
+	"Section '[ Pipeline ]':\n"
+	"\n"
+	"  FetchKind = {Shared|TimeSlice|SwitchOnEvent} (Default = TimeSlice)\n"
+	"      Policy for fetching instruction from different threads. A shared fetch stage\n"
+	"      fetches instructions from different threads in the same cycle; a time-slice\n"
+	"      fetch switches between threads in a round-robin fashion; option SwitchOnEvent\n"
+	"      switches thread fetch on long-latency operations or thread quantum expiration.\n"
+	"  DecodeWidth = <num_inst> (Default = 4)\n"
+	"      Number of x86 instructions decoded per cycle.\n"
+	"  DipatchKind = {Shared|TimeSlice} (Default = TimeSlice)\n"
+	"      Policy for dispatching instructions from different threads. If shared,\n"
+	"      instructions from different threads are dispatched in the same cycle. Otherwise,\n"
+	"      instruction dispatching is done in a round-robin fashion at a cycle granularity.\n"
+	"  DispatchWidth = <num_inst> (Default = 4)\n"
+	"      Number of microinstructions dispatched per cycle.\n"
+	"  IssueKind = {Shared|TimeSlice} (Default = TimeSlice)\n"
+	"      Policy for issuing instructions from different threads. If shared, instructions\n"
+	"      from different threads are issued in the same cycle; otherwise, instruction issue\n"
+	"      is done round-robin at a cycle granularity.\n"
+	"  IssueWidth = <num_inst> (Default = 4)\n"
+	"      Number of microinstructions issued per cycle.\n"
+	"  CommitKind = {Shared|TimeSlice} (Default = Shared)\n"
+	"      Policy for committing instructions from different threads. If shared,\n"
+	"      instructions from different threads are committed in the same cycle; otherwise,\n"
+	"      they commit in a round-robin fashion.\n"
+	"  CommitWidth = <num_inst> (Default = 4)\n"
+	"      Number of microinstructions committed per cycle.\n"
+	"  OccupancyStats = {t|f} (Default = False)\n"
+	"      Calculate structures occupancy statistics. Since this computation requires\n"
+	"      additional overhead, the option needs to be enabled explicitly. These statistics\n"
+	"      will be attached to the CPU report.\n"
+	"\n"
+	"Section '[ Queues ]':\n"
+	"\n"
+	"  FetchQueueSize = <bytes> (Default = 64)\n"
+	"      Size of the fetch queue given in bytes.\n"
+	"  UopQueueSize = <num_uops> (Default = 32)\n"
+	"      Size of the uop queue size, given in number of uops.\n"
+	"  RobKind = {Private|Shared} (Default = Private)\n"
+	"      Reorder buffer sharing among hardware threads.\n"
+	"  RobSize = <num_uops> (Default = 64)\n"
+	"      Reorder buffer size in number of microinstructions (if private, per-thread size).\n"
+	"  IqKind = {Private|Shared} (Default = Private)\n"
+	"      Instruction queue sharing among threads.\n"
+	"  IqSize = <num_uops> (Default = 40)\n"
+	"      Instruction queue size in number of uops (if private, per-thread IQ size).\n"
+	"  LsqKind = {Private|Shared} (Default = 20)\n"
+	"      Load-store queue sharing among threads.\n"
+	"  LsqSize = <num_uops> (Default = 20)\n"
+	"      Load-store queue size in number of uops (if private, per-thread LSQ size).\n"
+	"  RfKind = {Private|Shared} (Default = Private)\n"
+	"      Register file sharing among threads.\n"
+	"  RfIntSize = <entries> (Default = 80)\n"
+	"      Number of integer physical register (if private, per-thread).\n"
+	"  RfFpSize = <entries> (Default = 40)\n"
+	"      Number of floating-point physical registers (if private, per-thread).\n"
+	"\n"
+	"Section '[ TraceCache ]':\n"
+	"\n"
+	"  Present = {t|f} (Default = False)\n"
+	"      If true, a trace cache is included in the model. If false, the rest of the\n"
+	"      options in this section are ignored.\n"
+	"  Sets = <num_sets> (Default = 64)\n"
+	"      Number of sets in the trace cache.\n"
+	"  Assoc = <num_ways> (Default = 4)\n"
+	"      Associativity of the trace cache. The product Sets * Assoc is the total\n"
+	"      number of traces that can be stored in the trace cache.\n"
+	"  TraceSize = <num_uops> (Default = 16)\n"
+	"      Maximum size of a trace of uops.\n"
+	"  BranchMax = <num_branches> (Default = 3)\n"
+	"      Maximum number of branches contained in a trace.\n"
+	"  QueueSize = <num_uops> (Default = 32)\n"
+	"      Size of the trace queue size in uops.\n"
+	"\n"
+	"Section '[ FunctionalUnits ]':\n"
+	"\n"
+	"  The possible variables in this section follow the format\n"
+	"      <func_unit>.<field> = <value>\n"
+	"  where <func_unit> refers to a functional unit type, and <field> refers to a\n"
+	"  property of it. Possible values for <func_unit> are:\n"
+	"      IntAdd      Integer adder\n"
+	"      IntSub      Integer subtracter\n"
+	"      IntMult     Integer multiplier\n"
+	"      IntDiv      Integer divider\n"
+	"      EffAddr     Operator for effective address computations\n"
+	"      Logical     Operator for logical operations\n"
+	"      FpSimple    Simple floating-point operations\n"
+	"      FpAdd       Floating-point adder\n"
+	"      FpComp      Comparator of floating-point numbers\n"
+	"      FpMult      Floating-point multiplier\n"
+	"      FpDiv       Floating-point divider\n"
+	"      FpComplex   Operator for complex floating-point computations\n"
+	"  Possible values for <field> are:\n"
+	"      Count       Number of functional units of a given kind.\n"
+	"      OpLat       Latency of the operator.\n"
+	"      IssueLat    Latency since an instruction was issued until the functional\n"
+	"                  unit is available for the next use. For pipelined operators,\n"
+	"                  IssueLat is smaller than OpLat.\n"
+	"\n"
+	"Section '[ BranchPredictor ]':\n"
+	"\n"
+	"  Kind = {Perfect|Taken|NotTaken|Bimodal|TwoLevel|Combined} (Default = TwoLevel)\n"
+	"      Branch predictor type.\n"
+	"  BTB.Sets = <num_sets> (Default = 256)\n"
+	"      Number of sets in the BTB.\n"
+	"  BTB.Assoc = <num_ways) (Default = 4)\n"
+	"      BTB associativity.\n"
+	"  Bimod.Size = <entries> (Default = 1024)\n"
+	"      Number of entries of the bimodal branch predictor.\n"
+	"  Choice.Size = <entries> (Default = 1024)\n"
+	"      Number of entries for the choice predictor.\n"
+	"  RAS.Size = <entries> (Default = 32)\n"
+	"      Number of entries of the return address stack (RAS).\n"
+	"  TwoLevel.L1Size = <entries> (Default = 1)\n"
+	"      For the two-level adaptive predictor, level 1 size.\n"
+	"  TwoLevel.L2Size = <entries> (Default = 1024)\n"
+	"      For the two-level adaptive predictor, level 2 size.\n"
+	"  TwoLevel.HistorySize = <size> (Default = 8)\n"
+	"      For the two-level adaptive predictor, level 2 history size.\n"
+	"\n";
+
+
 /* Main Processor Global Variable */
 struct cpu_t *cpu;
 
@@ -144,12 +306,9 @@ void cpu_config_check(void)
 	lsq_kind = config_read_enum(cfg, section, "LsqKind", lsq_kind_private, lsq_kind_map, 2);
 	lsq_size = config_read_int(cfg, section, "LsqSize", 20);
 
-	
-	/* Section '[ RegisterFile ]' */
-	section = "RegisterFile";
-	rf_kind = config_read_enum(cfg, section, "Kind", rf_kind_private, rf_kind_map, 2);
-	rf_int_size = config_read_int(cfg, section, "IntSize", 80);
-	rf_fp_size = config_read_int(cfg, section, "FpSize", 40);
+	rf_kind = config_read_enum(cfg, section, "RfKind", rf_kind_private, rf_kind_map, 2);
+	rf_int_size = config_read_int(cfg, section, "RfIntSize", 80);
+	rf_fp_size = config_read_int(cfg, section, "RfFpSize", 40);
 
 
 	/* Section '[ TraceCache ]' */
